fix: round play button on mobile and force instant scroll

--- a/style.css
+++ b/style.css
@@ -573,7 +573,7 @@ textarea {
         width: 100% !important;
         height: 100% !important;
         margin: 0 !important;
-        border-radius: 0 !important;
+        border-radius: 50% !important;
     }
 
     #setlist-navigator {
